# advance-chunking-rag

./: .dockerignore  .env.docker  .gitignore  Dockerfile  LENGTH_FUNCTION_IMPROVEMENTS.md  README-Docker.md  docker-compose.prod.yml  docker-compose.yml  docker-start.sh  langchain-structural-block.py  main.py  nginx.conf  pyproject.toml  requirements-docker.txt  test_streaming.py
api/v1/: structural_block.py
big_file/: manage_bigfile copy.py  manage_bigfile.py
modals/: request_response.py
services/structural_block_chunking/: structural_block.py
study-research/: agentic_chunker.py  content.txt  simple.ipynb
study-research/agentic-chunking/: agentic-chunking copy.py  agentic-chunking.py
study-research/sentence-level/: sentence-level-segmentation copy.py  sentence-level-segmentation.py
study-research/sliding-window/: sliding-window copy.py  sliding-window.py
study-research/structural_block/: README.md  code-block-structure.py  deep-structural_block.py  sample_hierarchy.md  structural-block-pdf.py  structural-block.py  workwith-file-structural-block.py
